Basic frontend visual fixes

--- a/front.haml
+++ b/front.haml
@@ -21,17 +21,18 @@
       - if current
         Currently playing:
         %div{style: 'font-size: 200%;'}
-          %table{width: '100%'}
+          %table.table{width: '100%'}
             %tr
-              %td= current.artist
-              %td= current.album
-              %td= current.title
-              %td.pull-right= time_to_str(current.time)
+              %td= "#{current.artist} - #{current.title}"
         %hr
-      - if queue
-        Queue:
-        #queue= queue
-      - else
-        Nothing here.
+      Queue:
+      #queue
+        - if queue
+          = queue
+        - else
+          Nothing here.
       %hr
-      %small Powered by MPDQueue &copy; Copyright Piotr S. Staszewski.
+      %small
+        Powered by
+        %a{href: 'https://github.com/drbig/mpdqueue', target: '_blank'} MPDQueue
+        &copy; Copyright Piotr S. Staszewski.
