--- a/queue.haml
+++ b/queue.haml
@@ -1,14 +1,28 @@
-%table
+%table.table.table-striped
   %thead
     %tr
+      %th #
       %th Artist
       %th Album
       %th Title
-      %th.pull-right Length
+      %th.text-right Length
   %tbody
-    - queue.each do |song|
-      %tr
+    - total = 0
+    - queue.each_with_index do |song, i|
+      - total += song.time
+      - style = current == song ? {style: 'color: red;'} : {}
+      %tr{style}
+        %td= i+1
         %td= song.artist
         %td= song.album
         %td= song.title
-        %td.pull-right= time_to_str(song.time)
+        %td.text-right= time_to_str(song.time)
+    - if total > 0
+      %tr
+        %td
+        %td
+        %td
+        %td
+        %td.text-right
+          %b= time_to_str(total)
+
