--- a/views/front.haml
+++ b/views/front.haml
@@ -4,33 +4,27 @@
     %meta{charset: 'utf-8'}/
     %meta{content: 'IE=edge', 'http-equiv': 'X-UA-Compatible'}/
     %meta{content: 'width=device-width, initial-scale=1', name: 'viewport'}/
-    %title= "#{cfg[:title]} Queue"
+    %title= "#{config[:title]} Queue"
     %link{href: 'https://bootswatch.com/cyborg/bootstrap.min.css', rel: 'stylesheet'}/
     %script{src: 'https://code.jquery.com/jquery-2.1.3.min.js'}
     %script{src: 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'}
+    %script{src: rocketio_js}
+    %script{src: '/js/main.js'}
   %body
     .container
-      .h1= "#{cfg[:title]}"
+      .h1= "#{config[:title]}"
       %p
-        - if cfg[:stream_playlist]
-          %a{href: cfg[:stream_playlist]} Playlist
+        - if config[:stream_playlist]
+          %a{href: config[:stream_playlist]} Playlist
         &nbsp;
-        - if cfg[:stream_direct]
-          %a{href: cfg[:stream_playlist]} Stream
+        - if config[:stream_direct]
+          %a{href: config[:stream_playlist]} Stream
       %hr
-      - if current
-        Currently playing:
-        %div{style: 'font-size: 200%;'}
-          %table.table{width: '100%'}
-            %tr
-              %td= "#{current.artist} - #{current.title}"
-        %hr
-      Queue:
-      #queue
-        - if queue
-          = queue
-        - else
-          Nothing here.
+      Currently playing:
+      #current{style: 'font-size: 200%;'}
+      %hr
+      Playlist:
+      #playlist
       %hr
       %small
         Powered by
