Show Contact link if configured

--- a/views/front.haml
+++ b/views/front.haml
@@ -19,6 +19,9 @@
         &nbsp;
         - if config[:stream_direct]
           %a{href: config[:stream_playlist]} Stream
+        &nbsp;
+        - if config[:contact]
+          %a{href: config[:contact]} Contact
       %hr
       Currently playing:
       #current{style: 'font-size: 200%;'}
