Fix copyright in footer

--- a/views/front.haml
+++ b/views/front.haml
@@ -32,4 +32,4 @@
       %small
         Powered by
         %a{href: 'https://github.com/drbig/mpdqueue', target: '_blank'} MPDQueue
-        &copy; Copyright Piotr S. Staszewski.
+        &copy; Copyright 2015 Piotr S. Staszewski.
