--- a/views/front.haml
+++ b/views/front.haml
@@ -2,7 +2,7 @@
 %html{lang: 'en'}
   %head
     %meta{charset: 'utf-8'}/
-    %meta{content: 'IE=edge', 'http-equiv': 'X-UA-Compatible'}/
+    %meta{content: 'IE=edge', 'http-equiv' => 'X-UA-Compatible'}/
     %meta{content: 'width=device-width, initial-scale=1', name: 'viewport'}/
     %title= "#{config[:title]} Queue"
     %link{href: 'https://bootswatch.com/cyborg/bootstrap.min.css', rel: 'stylesheet'}/
