Fix direct stream link

--- a/views/front.haml
+++ b/views/front.haml
@@ -18,7 +18,7 @@
           %a{href: config[:stream_playlist]} Playlist
         &nbsp;
         - if config[:stream_direct]
-          %a{href: config[:stream_playlist]} Stream
+          %a{href: config[:stream_direct]} Stream
         &nbsp;
         - if config[:contact]
           %a{href: config[:contact]} Contact
