--- a/views/front.haml
+++ b/views/front.haml
@@ -5,6 +5,7 @@
     %meta{content: 'IE=edge', 'http-equiv' => 'X-UA-Compatible'}/
     %meta{content: 'width=device-width, initial-scale=1', name: 'viewport'}/
     %title= "#{config[:title]} Queue"
+    %link{href: 'https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css', rel: 'stylesheet'}/
     %link{href: 'https://bootswatch.com/cyborg/bootstrap.min.css', rel: 'stylesheet'}/
     %script{src: 'https://code.jquery.com/jquery-2.1.3.min.js'}
     %script{src: 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'}
