Show version, either from config or git based

--- a/views/front.haml
+++ b/views/front.haml
@@ -59,5 +59,6 @@
       %small
         Powered by
         %a{href: 'https://github.com/drbig/mpdqueue', target: '_blank'} MPDQueue
+        version #{ver}
         &copy; Copyright 2015 Piotr S. Staszewski.
   %script{src: '/js/main.js'}
