--- a/views/front.haml
+++ b/views/front.haml
@@ -39,6 +39,7 @@
           %hr
       Currently playing:
       #current{style: 'font-size: 200%;'}
+        != render_current
       %hr
       - if config [:stream_widget]
         Play directly in browser:
@@ -55,6 +56,7 @@
         %hr
       Playlist:
       #playlist
+        != render_playlist
       %hr
       %small
         Powered by
