--- a/views/front.haml
+++ b/views/front.haml
@@ -9,6 +9,7 @@
     %link{href: 'https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css', rel: 'stylesheet'}/
     %link{href: 'https://bootswatch.com/cyborg/bootstrap.min.css', rel: 'stylesheet'}/
     %script{src: 'https://code.jquery.com/jquery-2.1.3.min.js'}
+    %script{src: 'https://code.jquery.com/ui/1.11.4/jquery-ui.min.js'}
     %script{src: 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'}
     %script{src: rocketio_js}
   %body
@@ -32,6 +33,10 @@
           &nbsp;
         - if config[:info_title]
           %a{onclick: 'toggleInfo()'}= config[:info_title]
+          &nbsp;
+        - if config[:counter]
+          %span.glyphicon.glyphicon-user
+          %span#counter 1
       %hr
       - if config[:info_text]
         #info{style: 'display: none; width: 100%;'}
