--- a/views/front.haml
+++ b/views/front.haml
@@ -8,6 +8,7 @@
     %link{href: '/favicon.ico', rel: 'icon', type: 'image/x-icon'}/
     %link{href: 'https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css', rel: 'stylesheet'}/
     %link{href: 'https://bootswatch.com/cyborg/bootstrap.min.css', rel: 'stylesheet'}/
+    %link{href: '/css/main.css', rel: 'stylesheet'}/
     %script{src: 'https://code.jquery.com/jquery-2.1.3.min.js'}
     %script{src: 'https://code.jquery.com/ui/1.11.4/jquery-ui.min.js'}
     %script{src: 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'}
